# Huffman-File-Compressor

./: .gitignore  CMakeLists.txt  Compressor.cpp  Compressor.h  FileManager.cpp  FileManager.h  Huffman.cpp  Huffman.h  README.md  compile.bat  main.cpp
input/: sample.txt
